--- a/package.json
+++ b/package.json
@@ -19,17 +19,25 @@
   "license": "GPL-3.0-or-later",
   "author": "WeariTraveller",
   "type": "module",
-  "main": "index.js",
+  "bin": {
+    "mntool": "dist/cli.js"
+  },
+  "files": [
+    "dist/",
+    "assets"
+  ],
   "scripts": {
     "prepare": "husky",
     "fmt-staged": "nano-staged",
+    "build": "tsc",
     "test": "jest"
   },
-  "packageManager": "pnpm@10.12.4",
+  "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
     "husky": "^9.1.7",
     "jest": "^30.0.5",
-    "nano-staged": "^0.8.0"
+    "nano-staged": "^0.8.0",
+    "typescript": "^5.9.2"
   }
 }
