--- a/package.json
+++ b/package.json
@@ -35,9 +35,14 @@
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
+    "@types/node": "^24.1.0",
+    "@types/yargs": "^17.0.33",
     "husky": "^9.1.7",
     "jest": "^30.0.5",
     "nano-staged": "^0.8.0",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "yargs": "^18.0.0"
   }
 }
