--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "files": [
     "dist/",
-    "assets"
+    "assets/"
   ],
   "scripts": {
     "prepare": "husky",
@@ -35,6 +35,7 @@
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.1.0",
     "@types/yargs": "^17.0.33",
     "husky": "^9.1.7",
@@ -43,6 +44,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "fs-extra": "^11.3.1",
     "yargs": "^18.0.0"
   }
 }
