--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
     "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/yargs": "^17.0.33",
     "husky": "^9.1.7",
     "jest": "^30.0.5",
     "nano-staged": "^0.8.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
   },
   "dependencies": {
