--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^30.0.5",
     "nano-staged": "^0.8.0",
     "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
