--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "tsc",
     "test": "jest"
   },
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.0",
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
     "@types/fs-extra": "^11.0.4",
@@ -47,6 +47,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@pnpm/filter-workspace-packages": "^1000.0.33",
     "fs-extra": "^11.3.1",
     "yargs": "^18.0.0"
   }
