--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "double"
+      "quoteStyle": "double",
+      "arrowParentheses": "asNeeded"
     }
   },
   "assist": {
