--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@pnpm/filter-workspace-packages": "^1000.0.33",
     "fs-extra": "^11.3.1",
+    "upath": "^2.0.1",
     "yargs": "^18.0.0"
   }
 }
