--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
   },
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
-    "@biomejs/biome": "^2.1.3",
+    "@biomejs/biome": "^2.2.2",
     "@pnpm/types": "^1000.7.0",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.3.0",
     "@types/yargs": "^17.0.33",
     "husky": "^9.1.7",
-    "jest": "^30.0.5",
     "nano-staged": "^0.8.0",
-    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "unplugin-auto-import": "^20.1.0",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@pnpm/filter-workspace-packages": "^1000.0.33",
