--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "prepare": "husky",
     "fmt-staged": "nano-staged",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "test": "jest"
   },
   "packageManager": "pnpm@10.15.0",
@@ -37,14 +37,12 @@
     "@biomejs/biome": "^2.2.2",
     "@pnpm/types": "^1000.7.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "@types/yargs": "^17.0.33",
     "husky": "^9.1.7",
     "nano-staged": "^0.8.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "unplugin-auto-import": "^20.1.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
