--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.ts"],
-  "files": []
+  "exclude": ["**/tests/**/*", "**/*.test.ts"]
 }
