Make cmd `tadim` pass all tests

--- a/biome.json
+++ b/biome.json
@@ -20,7 +20,8 @@
         "noCommaOperator": "warn"
       },
       "suspicious": {
-        "noAssignInExpressions": "warn"
+        "noAssignInExpressions": "warn",
+        "useIterableCallbackReturn": "warn"
       }
     }
   },
